update table container

--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -12,6 +12,11 @@
     .span_with_for {
         width: 65px !important
     }
+
+    .table-container {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
@@ -37,20 +42,22 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-xxl-12">
-                        <table class="table table-hover">
-                            <thead>
-                                <tr>
-                                    <th style="vertical-align:middle;">Nguyện vọng</th>
-                                    <th style="vertical-align:middle;">Mã ngành - Ngành</th>
-                                    <th style="vertical-align: middle; text-align: center;">Tên trường tổ chức</th>
-                                    <th style="vertical-align: middle; text-align: center;">Kết quả đạt được</th>
-                                    <th style="vertical-align: middle; text-align: center;">Ngày dự thi</th>
-                                    <th style="vertical-align:middle; text-align:center; width:120px">Cập nhật</th>
-                                </tr>
-                            </thead>
-                            <tbody id="tbody_list_nguyenvong">
-                            </tbody>
-                        </table>
+                        <div class="table-container">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th style="vertical-align:middle;">Nguyện vọng</th>
+                                        <th style="vertical-align:middle;">Mã ngành - Ngành</th>
+                                        <th style="vertical-align: middle; text-align: center;">Tên trường tổ chức</th>
+                                        <th style="vertical-align: middle; text-align: center;">Kết quả đạt được</th>
+                                        <th style="vertical-align: middle; text-align: center;">Ngày dự thi</th>
+                                        <th style="vertical-align:middle; text-align:center; width:120px">Cập nhật</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbody_list_nguyenvong">
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
