--- a/Views/DangKyXetTuyenKhac/Ielts.cshtml
+++ b/Views/DangKyXetTuyenKhac/Ielts.cshtml
@@ -8,9 +8,12 @@
     label {
         white-space: nowrap !important;
     }
-
     .span_with_for {
         width: 65px !important
+    }
+    .table-container {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
     }
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
@@ -37,20 +40,22 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-xxl-12">
-                        <table class="table table-hover">
-                            <thead>
-                                <tr>
-                                    <th style="vertical-align:middle;">Nguyện vọng</th>
-                                    <th style="vertical-align:middle;">Mã ngành - Ngành</th>
-                                    <th style="vertical-align: middle; text-align: center;">Tên chứng chỉ quốc tế</th>
-                                    <th style="vertical-align: middle; text-align: center;">Kết quả đạt được</th>
-                                    <th style="vertical-align: middle; text-align: center;">Ngày dự thi</th>
-                                    <th style="vertical-align:middle; text-align:center; width:120px">Cập nhật</th>
-                                </tr>
-                            </thead>
-                            <tbody id="tbody_list_nguyenvong">
-                            </tbody>
-                        </table>
+                        <div class="table-container">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th style="vertical-align:middle;">Nguyện vọng</th>
+                                        <th style="vertical-align:middle;">Mã ngành - Ngành</th>
+                                        <th style="vertical-align: middle; text-align: center;">Tên chứng chỉ quốc tế</th>
+                                        <th style="vertical-align: middle; text-align: center;">Kết quả đạt được</th>
+                                        <th style="vertical-align: middle; text-align: center;">Ngày dự thi</th>
+                                        <th style="vertical-align:middle; text-align:center; width:120px">Cập nhật</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbody_list_nguyenvong">
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
