--- a/Views/ThiSinhDangKies/Edit.cshtml
+++ b/Views/ThiSinhDangKies/Edit.cshtml
@@ -440,7 +440,7 @@
                     </div>
 
                     <div class="col-md-3">
-                        <label class="form-label mb-1" for="DoiTuong_ID">Đối tượng <a style="color:red; text-decoration:none">(*)</a> </label>
+                        <label class="form-label mb-1" for="DoiTuong_ID">Đối tượng</label>
                         <select class="form-select" id="DoiTuong_ID" type="text" placeholder="Đối tượng"></select>
                         <span id="DoiTuong_ID_Error" class="small mb-1 text-danger"></span>
                     </div>
